Fixed spacing.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -455,6 +455,7 @@ table {
 		--callout-color: #7ED321;
 		color: var(--callout-color);
 		border-color: var(--callout-color);
+		font-size: 1.25em;
 	}
 	
 	// Important (orange/pink) - critical information, pay attention
