--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -16,3 +16,7 @@
 		min-height: 500px;
 	}
 }
+
+.page.page--with-hero {
+	margin-top: 0;
+}
